# bigo_guardian

./: README.md  build.gradle  settings.gradle
.github/workflows/: android-build.yml  build-ffmpeg.yml  build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/arthenica/ffmpegkit/: FFmpegKitConfig.java
app/src/main/java/com/bigo/guardian/: MainActivity.java  RecorderService.java
app/src/main/java/com/bigo/posix/: MainActivity.java
app/src/main/java/com/example/bigoguardian/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
